testdata/Call.##/Call.##.2.13-new.check
// exitCode: 1
target/testdata/Call.##.scala:8: error: Int does not take parameters
  any.##()
        ^
target/testdata/Call.##.scala:11: error: Int does not take parameters
  ref.##()
        ^
target/testdata/Call.##.scala:14: error: Int does not take parameters
  obj.##()
        ^
target/testdata/Call.##.scala:17: error: Int does not take parameters
  str.##()
        ^
4 errors
